--- a/chapter8_exercise.css
+++ b/chapter8_exercise.css
@@ -23,15 +23,15 @@ main {
 }
 
 .box-list {
-  display:flex;
+  display: flex;
   flex-wrap: wrap;
 }
 
 .box {
-  width: 30%;
-  height: 200px;
   margin-bottom: 40px;
   margin-right: 5%;
+  width: 30%;
+  height: 200px;
   background-color: #ffd700;
 }
 
@@ -45,4 +45,6 @@ main {
   margin-right: 0;
 }
 
-.box:nth-last-child(-n + 3)
+.box:nth-last-child(-n + 3) {
+  margin-bottom: 0;
+}
